--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,9 +4,9 @@
     <h1>Error <%= err.statusCode %></h1>
     <p><%= err.message %></p>
     
-    <% if (err.stack) { %>
+    <!-- <% if (err.stack) { %>
       <pre><%= err.stack %></pre>
-    <% } %>
+    <% } %> -->
     
     <!-- <span><%= err.statusCode %></span>
     <h4 class="alert-heading"><%= err.message %></h4> -->
